fix css wrapping

--- a/data/iceshrimp-light/Custom.css
+++ b/data/iceshrimp-light/Custom.css
@@ -1,9 +1,9 @@
 /*
     This is the default CSS for the IceShrimp Light theme.
 
-    This applies small fixes that makes Revolt more in place with the
-    theme, it is entirely optional to have this CSS as-is, but
-    things may feel slightly off.
+    This applies small fixes that makes Revolt more in place
+    with the upstream theme, it is entirely optional to have
+    this CSS as-is, but things may feel slightly off.
 */
 
 :root {
@@ -36,4 +36,8 @@ a[href^="/server/"] svg > circle {
 [class^="ServerHeader__ServerBanner-sc-"] {
     margin: 0.5rem;
     border-radius: var(--border-radius-user-icon);
+}
+
+a, a:visited {
+    color: #FF7268;
 }
